update : ignored some file

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ replay_pid*
 takeuforward/striver_AZ_cheatsheet/.idea/striver_AZ_cheatsheet.iml
 *.iml
 /takeuforward/striver_AZ_cheatsheet/out
+/codin patterns/topics/Arrays/out
